unpackaged/main/default/objects/Product2/fields/Core_Product__c.field-meta.xml
<CustomField>
    <fullName>Core_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Provisioning Required?</label>
    <type>Checkbox</type>
</CustomField>