unpackaged/main/default/objects/Product2/fields/CZ_ItemId__c.field-meta.xml
<CustomField>
    <fullName>CZ_ItemId__c</fullName>
    <externalId>true</externalId>
    <label>CZ ItemId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>