unpackaged/main/default/objects/Product2/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Product is related to this Dimension</description>
    <label>Dimension 1</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>