unpackaged/main/default/objects/Product2/fields/Financial_Statement_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Statement_Type__c</fullName>
    <label>Financial Statement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financial_Statement_Type</valueSetName>
    </valueSet>
</CustomField>