unpackaged/main/default/objects/Product2/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Number</label>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>