unpackaged/main/default/objects/Product2/fields/Inclusive_Product__c.field-meta.xml
<CustomField>
    <fullName>Inclusive_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inclusive Product</label>
    <type>Checkbox</type>
</CustomField>