unpackaged/main/default/objects/Product2/fields/Last_CZ_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_CZ_Sync__c</fullName>
    <description>The last date/time this product was synced over to ChargeZoom.</description>
    <inlineHelpText>The last date/time this product was synced over to ChargeZoom.</inlineHelpText>
    <label>Last CZ Sync</label>
    <type>DateTime</type>
</CustomField>