unpackaged/main/default/objects/Product2/fields/Level_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Name__c</fullName>
    <label>Level 1 Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>