unpackaged/main/default/objects/Product2/fields/Level_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Name__c</fullName>
    <label>Level 2 Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>