unpackaged/main/default/objects/Product2/fields/Locked_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Locked_Frequency__c</fullName>
    <inlineHelpText>If defined here, the billing frequency will be pre-populated when a Billing Product is being setup.</inlineHelpText>
    <label>Locked Frequency?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>