unpackaged/main/default/objects/Product2/fields/Meetings_Included__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Included__c</fullName>
    <description>Used to track whether a group is receiving the engagements purchased.</description>
    <label>Meetings Included</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>