unpackaged/main/default/objects/Product2/fields/Mid_Cycle_Partial_Product__c.field-meta.xml
<CustomField>
    <fullName>Mid_Cycle_Partial_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the product that will be used when the product is added mid-cycle in order to cover pro-rated fees to the client.</inlineHelpText>
    <label>Mid-Cycle Partial Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Mid-Cycle Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>