unpackaged/main/default/objects/Product2/fields/NCM_Authorized_Products__c.field-meta.xml
<CustomField>
    <fullName>NCM_Authorized_Products__c</fullName>
    <description>NCM Products that this billing account is authorized to be used for payment.</description>
    <label>NCM Authorized Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCM_Authorized_Products</valueSetName>
    </valueSet>
</CustomField>