unpackaged/main/default/objects/Product2/fields/NCM_Products_and_Services__c.field-meta.xml
<CustomField>
    <fullName>NCM_Products_and_Services__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCM Products and Services</label>
    <referenceTo>NCM_Products_and_Services__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>