unpackaged/main/default/objects/Product2/fields/Objects_Added_From__c.field-meta.xml
<CustomField>
    <fullName>Objects_Added_From__c</fullName>
    <label>Objects Added From</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Object_Structure__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20 Group Member Account</fullName>
            </value>
            <value>
                <fullName>20 Groups</fullName>
            </value>
            <value>
                <fullName>aXcessa Group</fullName>
            </value>
            <value>
                <fullName>aXcessa Store</fullName>
            </value>
            <value>
                <fullName>Echo Store</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Engagement Attendee</fullName>
            </value>
            <value>
                <fullName>Healthcheck Instance</fullName>
            </value>
            <value>
                <fullName>Healthcheck Store</fullName>
            </value>
            <value>
                <fullName>NCM Program</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Proprietary Account</fullName>
            </value>
            <value>
                <fullName>Proprietary Group</fullName>
            </value>
            <value>
                <fullName>Proprietary Master Group</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Training Credit</fullName>
            </value>
            <value>
                <fullName>Training Subscription</fullName>
            </value>
            <value>
                <fullName>Training Subscription Account</fullName>
            </value>
            <value>
                <fullName>Training Subscription Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>