unpackaged/main/default/objects/Product2/fields/Product_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Value__c</fullName>
    <inlineHelpText>Value of the core product being sold.</inlineHelpText>
    <label>Product Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>