unpackaged/main/default/objects/Product2/fields/ProductID_18__c.field-meta.xml
<CustomField>
    <fullName>ProductID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductID (18)</label>
    <type>Text</type>
</CustomField>