unpackaged/main/default/objects/Product2/fields/Production_Run_Type__c.field-meta.xml
<CustomField>
    <fullName>Production_Run_Type__c</fullName>
    <label>Production Run Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>New Member</fullName>
            </value>
            <value>
                <fullName>New Proprietary Member</fullName>
            </value>
            <value>
                <fullName>Special Composite</fullName>
            </value>
            <value>
                <fullName>Retail Ops</fullName>
            </value>
            <value>
                <fullName>CIP</fullName>
            </value>
            <value>
                <fullName>PTA</fullName>
            </value>
            <value>
                <fullName>Trend</fullName>
            </value>
            <value>
                <fullName>FIDO</fullName>
            </value>
            <value>
                <fullName>PPP</fullName>
            </value>
            <value>
                <fullName>PAR</fullName>
            </value>
            <value>
                <fullName>Three-Year Comp</fullName>
            </value>
            <value>
                <fullName>CIP - Org Meeting</fullName>
            </value>
            <value>
                <fullName>Retail Ops Proprietary</fullName>
            </value>
            <value>
                <fullName>HealthCheck</fullName>
            </value>
            <value>
                <fullName>ConSept New Member</fullName>
            </value>
            <value>
                <fullName>ConSept New Proprietary Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>