unpackaged/main/default/objects/Product2/fields/Record_Provisioning__c.field-meta.xml
<CustomField>
    <fullName>Record_Provisioning__c</fullName>
    <label>Flow Provisioning Path</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Core_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aXcessa Store</fullName>
            </value>
            <value>
                <fullName>Cohort Student</fullName>
            </value>
            <value>
                <fullName>Echo</fullName>
            </value>
            <value>
                <fullName>Group Member</fullName>
            </value>
            <value>
                <fullName>NCMi Seat</fullName>
            </value>
            <value>
                <fullName>Proprietary Account</fullName>
            </value>
            <value>
                <fullName>Proprietary Group</fullName>
            </value>
            <value>
                <fullName>Proprietary Master Group</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Subscription Term Transition</fullName>
            </value>
            <value>
                <fullName>Training Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>