unpackaged/main/default/objects/Product2/fields/Recovery_GLA__c.field-meta.xml
<CustomField>
    <fullName>Recovery_GLA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This product requires a recovery calculation for accounting purposes</inlineHelpText>
    <label>Recovery GLA</label>
    <type>Checkbox</type>
</CustomField>