unpackaged/main/default/objects/Product2/fields/Shipped_Product__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipped Product?</label>
    <type>Checkbox</type>
</CustomField>