unpackaged/main/default/objects/Product2/fields/Spiff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Amount__c</fullName>
    <label>Spiff / Commission Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>