unpackaged/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Originally added to mark certain products as automatically billed.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Setup Fee</fullName>
            </value>
            <value>
                <fullName>Candidate Composite</fullName>
            </value>
            <value>
                <fullName>Paid Seat</fullName>
            </value>
            <value>
                <fullName>GMEP</fullName>
            </value>
            <value>
                <fullName>Training Credits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>