unpackaged/main/default/objects/Product2/recordTypes/axcessa.recordType-meta.xml
<RecordType>
    <fullName>axcessa</fullName>
    <active>true</active>
    <label>axcessa</label>
</RecordType>