unpackaged/main/default/objects/Product2/recordTypes/Composite_Benchmark.recordType-meta.xml
<RecordType>
    <fullName>Composite_Benchmark</fullName>
    <active>true</active>
    <label>Composite / Benchmark</label>
</RecordType>