unpackaged/main/default/objects/Product2/recordTypes/DHG_TAG.recordType-meta.xml
<RecordType>
    <fullName>DHG_TAG</fullName>
    <active>true</active>
    <label>DHG / TAG</label>
</RecordType>