unpackaged/main/default/objects/Product2/recordTypes/NCMi.recordType-meta.xml
<RecordType>
    <fullName>NCMi</fullName>
    <active>true</active>
    <description>NCM Institute</description>
    <label>NCMi</label>
</RecordType>