unpackaged/main/default/objects/Product2/recordTypes/Select_100.recordType-meta.xml
<RecordType>
    <fullName>Select_100</fullName>
    <active>true</active>
    <label>Select 100</label>
</RecordType>