unpackaged/main/default/objects/Product2/recordTypes/X20_Groups.recordType-meta.xml
<RecordType>
    <fullName>X20_Groups</fullName>
    <active>true</active>
    <label>20 Groups</label>
</RecordType>