unpackaged/main/default/objects/Product2/recordTypes/X20_Groups_ConSept.recordType-meta.xml
<RecordType>
    <fullName>X20_Groups_ConSept</fullName>
    <active>true</active>
    <description>Consept 20 Groups</description>
    <label>20 Groups - ConSept</label>
</RecordType>