unpackaged/main/default/objects/Product2/listViews/All_Active_Products.listView-meta.xml
<ListView>
    <fullName>All_Active_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Level_1_Name__c</columns>
    <columns>Level_2_Name__c</columns>
    <columns>Locked_Frequency__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Spiff_Amount__c</columns>
    <columns>Objects_Added_From__c</columns>
    <columns>Product_Value__c</columns>
    <columns>NCM_Authorized_Products__c</columns>
    <columns>Recovery_GLA__c</columns>
    <columns>c2g__CODASalesRevenueAccount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Products</label>
</ListView>