unpackaged/main/default/objects/Product2/listViews/AllInactiveProducts.listView-meta.xml
<ListView>
    <fullName>AllInactiveProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>c2g__CODASalesRevenueAccount__c</columns>
    <columns>Product_Value__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Inactive Products</label>
</ListView>