unpackaged/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Product_Value__c</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Locked_Frequency__c</columns>
    <columns>Level_1_Name__c</columns>
    <columns>Level_2_Name__c</columns>
    <columns>c2g__CODASalesRevenueAccount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
    </filters>
    <label>All Products</label>
</ListView>