unpackaged/main/default/objects/Product2/listViews/Institute.listView-meta.xml
<ListView>
    <fullName>Institute</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Level_1_Name__c</columns>
    <columns>Level_2_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>NCM Institute</value>
    </filters>
    <label>Institute</label>
</ListView>