unpackaged/main/default/objects/Product2/listViews/Modify_to_search.listView-meta.xml
<ListView>
    <fullName>Modify_to_search</fullName>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Product_Value__c</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Locked_Frequency__c</columns>
    <columns>Level_1_Name__c</columns>
    <columns>Level_2_Name__c</columns>
    <columns>c2g__CODASalesRevenueAccount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>startsWith</operation>
        <value>SETUP FEE</value>
    </filters>
    <label>Modify to search</label>
</ListView>