unpackaged/main/default/objects/Product2/listViews/Shipping_Fees.listView-meta.xml
<ListView>
    <fullName>Shipping_Fees</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>SHIPPING &amp; HANDLING</value>
    </filters>
    <label>Shipping Fee Products</label>
</ListView>