unpackaged/main/default/objects/Product2/listViews/X20_Group_Active_Products.listView-meta.xml
<ListView>
    <fullName>X20_Group_Active_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Level_1_Name__c</columns>
    <columns>Level_2_Name__c</columns>
    <columns>Locked_Frequency__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Dimension_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.X20_Groups,Product2.X20_Groups_ConSept</value>
    </filters>
    <label>20 Group Active Products</label>
</ListView>